# red-dwarf

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  Makefile  README.md  TODO.md  debug.py  mkdocs.yml  pyproject.toml  select-consensus-statements.ipynb
.github/workflows/: deploy-docs.yml  pkg-install-test.yml  test.yml
docs/: api_reference.md  dup-votes.ipynb  example-usage.ipynb  heatmap.ipynb  map-xids.ipynb  strip-pass-votes.ipynb
docs/notebooks/: alternative-algorithms.ipynb  dump-downloaded-polis-data.ipynb  dup-votes.ipynb  example-usage.ipynb  experiment-pca-pacmap-localmap-comparison.ipynb  heatmap.ipynb  loading-data.ipynb  map-xids.ipynb  polis-implementation-demo.ipynb  polis-implementation-legacy-demo.ipynb  polis-implementation-results-docs.ipynb  select-consensus-statements.ipynb  strip-pass-votes.ipynb  tabpfn-experiment.ipynb
docs/notebooks/untested/: tabpfn-experiment.ipynb
reddwarf/: agora.py  data_loader.py  data_presenter.py  exceptions.py  helpers.py  models.py  polis.py  polis_pandas.py  utils.py
reddwarf/implementations/: agora.py  base.py  polis.py  polis_legacy.py
reddwarf/sample_data/: comments.json  math-pca2.json
reddwarf/sklearn/: cluster.py  model_selection.py  pipeline.py  transformers.py
reddwarf/types/: agora.py  demdis.py  polis.py
reddwarf/utils/: __init__.py  clustering.py  consensus.py  matrix.py  pca.py  polismath.py  statements.py  stats.py
reddwarf/utils/clusterer/: base.py  kmeans.py
reddwarf/utils/reducer/: base.py  pca.py
sample_data/: comments.json  math-pca2.json  participationInit.json  votes.json
sample_data/below-100-ptpts/: comments.json
scripts/: download_sample_data.py  download_sample_data.sh  release.py
tests/: fixtures.py  helpers.py  test_agora.py  test_consensus.py  test_data_loader.py  test_data_presenter.py  test_extras.py  test_fixtures.py  test_polis.py  test_polis_pandas.py  test_utils.py
tests/fixtures/150ptpt-3gp-no-strict-no-meta/: comments.json  conversation.json  math-pca2.json  votes.json
tests/fixtures/25ptpt-3gp-no-strict-with-meta/: comments.json  conversation.json  math-pca2.json  votes.json
tests/fixtures/50ptpt-3gp-strict-no-meta/: comments.json  conversation.json  math-pca2.json  votes.json
tests/fixtures/above-100-ptpts/: comments.json  conversation.json  math-pca2.json  participationInit.json  votes.json
tests/fixtures/below-100-ptpts/: conversation.json  math-pca2.json  votes.json
tests/implementations/: test_agora.py  test_base.py  test_polis.py  test_polis_legacy.py
tests/utils/: test_clustering.py  test_comment_statistics.py  test_consensus.py  test_pca.py  test_polismath.py  test_representativeness.py  test_statements.py  test_stats.py
tests/utils/clusterer/: test_base.py  test_kmeans.py
