[project]
name = "reddwarf"
version = "0.1.0"
description = "A dimensional reduction library for stellarpunk democracy into the long haul"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fake-useragent>=2.0.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.2",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "requests-ratelimiter>=0.7.0",
    "concave-hull>=0.0.9",
    "seaborn>=0.13.2",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
include = ["reddwarf*"]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mkdocs-same-dir>=0.1.3",
    "mkdocstrings-python>=1.15.0",
    "pytest-cov>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]
